[#4321] Allow specific amount of submissions per form

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -44,6 +44,11 @@
     "description": "action type \"step-applicable\" label",
     "originalDefault": "Mark the form step as applicable"
   },
+  "/cUjWg": {
+    "defaultMessage": "The maximum number of allowed submissions for this form. Leave this empty if no limit is needed.",
+    "description": "Successful Submissions Removal Limit help text",
+    "originalDefault": "The maximum number of allowed submissions for this form. Leave this empty if no limit is needed."
+  },
   "/fAEsY": {
     "defaultMessage": "Submission report CSV informatieobjecttype",
     "description": "Objects API registration options \"Submission report CSV informatieobjecttype\" label",
@@ -874,6 +879,11 @@
     "description": "Form definition selection modal title",
     "originalDefault": "Use existing form definition"
   },
+  "GJ8Ok2": {
+    "defaultMessage": "Reset submissions counter",
+    "description": "Reset submissions counter",
+    "originalDefault": "Reset submissions counter"
+  },
   "GO9yud": {
     "defaultMessage": "When the form should be activated.",
     "description": "Form activation field help text",
@@ -998,6 +1008,11 @@
     "defaultMessage": "Appointment enabled",
     "description": "Form appointment enabled field label",
     "originalDefault": "Appointment enabled"
+  },
+  "HrSXGN": {
+    "defaultMessage": "You are about to reset the submissions counter and this action is irreversible. Are you sure that you want to do this?",
+    "description": "Reset the submissions counter confirmation message",
+    "originalDefault": "You are about to reset the submissions counter and this action is irreversible. Are you sure that you want to do this?"
   },
   "HuAm1K": {
     "defaultMessage": "and the step \"{step}\" has been reached",
@@ -2584,6 +2599,11 @@
     "description": "Email registration options 'attachFilesToEmail' label",
     "originalDefault": "Attach files to email"
   },
+  "oWOr9u": {
+    "defaultMessage": "Submission",
+    "description": "Form submission options tab title",
+    "originalDefault": "Submission"
+  },
   "oYmpN5": {
     "defaultMessage": "Whether to include the content of the confirmation page in the PDF.",
     "description": "Include confirmation page content in PDF",
@@ -2833,6 +2853,11 @@
     "defaultMessage": "Description (omschrijving) of the ROLTYPE to use for employees filling in a form for a citizen/company.",
     "description": "Objects API registration options 'medewerkerRoltype' help text",
     "originalDefault": "Description (omschrijving) of the ROLTYPE to use for employees filling in a form for a citizen/company."
+  },
+  "u+IP17": {
+    "defaultMessage": "Maximum allowed number of submissions",
+    "description": "Form submissionLimit field label",
+    "originalDefault": "Maximum allowed number of submissions"
   },
   "u/0IPY": {
     "defaultMessage": "House number addition Schema target",
