:pencil: Update technical configuration documentation for Objects API
* Updated some outdated registration plugin docs
* Structured the prefill docs the same way

It's important to separate the upfront technical configuration (aimed
at technical administrators) from the manual which describes how to
use the feature.

Another commit will add the functional user manual documentation as an
example form.

--- a/src/openforms/conf/locale/nl/LC_MESSAGES/django.po
+++ b/src/openforms/conf/locale/nl/LC_MESSAGES/django.po
@@ -11663,7 +11663,7 @@ msgstr "Geeft aan of gevoelige gegevens verwijders zijn van deze inzending."
 
 #: openforms/submissions/models/submission.py:263
 msgid "initial data reference"
-msgstr "ongeldige data-referentie"
+msgstr "startdata-referentie"
 
 #: openforms/submissions/models/submission.py:266
 msgid ""
