--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -2524,6 +2524,11 @@
     "description": "\"variable\" operand type",
     "originalDefault": "the variable"
   },
+  "mOh/pF": {
+    "defaultMessage": "The email address described in this variable will be used for the mailing. If a variable is selected, the general registration addresses will be used as fallback option.",
+    "description": "Email registration options 'toEmailsFromVariable' helpText",
+    "originalDefault": "The email address described in this variable will be used for the mailing. If a variable is selected, the general registration addresses will be used as fallback option."
+  },
   "mOjKcm": {
     "defaultMessage": "Steps and fields",
     "description": "Form design tab title",
@@ -2913,6 +2918,11 @@
     "defaultMessage": "History",
     "description": "History link button",
     "originalDefault": "History"
+  },
+  "uwCD8e": {
+    "defaultMessage": "Using a variable to decide to which email address the submission details will be sent",
+    "description": "Email registration options 'toEmailsFromVariable' label",
+    "originalDefault": "Using a variable to decide to which email address the submission details will be sent"
   },
   "vAZDY4": {
     "defaultMessage": "Source path",
